--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "scripts": {
-  "start": "concurrently \"npm start --prefix backend\" \"npm start --prefix frontend\""
+    "dev:backend": "cd backend && npm run dev",
+    "dev:frontend": "cd frontend && pnpm run dev",
+    "dev:both": "npm-run-all --parallel dev:backend dev:frontend"
   },
-  
   "devDependencies": {
-    "concurrently": "^9.0.1"
+    "concurrently": "^9.0.1",
+    "npm-run-all": "^4.1.5"
   }
 }
